# scientific_computation_mcp

./: Dockerfile  cert.pem  client.py  key.pem  pyproject.toml  smithery.yaml
src/: main.py  middleware.py  server.py
