[project]
name = "numpy-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "sympy>=1.14.0",
    "typing",
    "pydantic",
    "fastapi>=0.116.1",
    "mcp>=1.13.1",
    "typer>=0.17.3",
]

[tool.uv.workspace]
members = [
    "Aman Shastry",
]
